# internal/ports/http/handlers/courses/commands/submit_task.go
@@ -6,6 +6,19 @@ import (
 	"net/http"
 )
 
+// @Summary submit task
+// @Description submit task
+// @Tags courses
+// @Accept json
+// @Produce json
+// @Security     BearerAuth
+// @param Authorization header string true "Authorization token"
+// @Param course_id path string true "course id"
+// @Param topic_id path string true "topic id"
+// @Param task_id path string true "task id"
+// @Param  request body submitTaskRequest true "request"
+// @Success 200 {object} api.EmptySuccessResponse "Success"
+// @Router /api/v1/courses/{course_id}/topic/{topic_id}/task/{task_id}/submit [post]
 func (c *Controller) submitTask(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	session, err := api.GetSession(ctx)
